--- a/src/app/neon-form/neon-form.component.html
+++ b/src/app/neon-form/neon-form.component.html
@@ -287,7 +287,7 @@
           </div>
 
           <div class="row toggleCont">
-            <label><input  autocomplete="off" (change)="signuptrue()" type="checkbox" class="ios-switch" />
+            <label><input  autocomplete="off" (click)="signuptrue()" type="checkbox" class="ios-switch" />
               <div>
                 <div></div>
               </div>
@@ -378,7 +378,7 @@
         </div>
         
         <span    class="neon-wizard-descr-merci">
-          Merci pour votre demande. Vous recevrez un email demain     avec le devis de votre néon.
+          Merci pour votre demande. Vous recevrez un email demain avec le devis de votre néon.
         </span>
 
         <div class="neon-wizard-btn-container row flex0">
