--- a/src/styles.scss
+++ b/src/styles.scss
@@ -102,14 +102,14 @@
 }
 
 .newPrev-btn {
-  height: 40px;
-  width: 40px;
-  border-radius: 50%;
+  height: 50px;
+  width: 50px;
+  border-radius: 75%;
   background-color: white;
   border: solid 2px #f4cc20 ;
   outline: none !important;
   margin-left: 15px;
-  align-self: center;
+  align-self: start;
 
 
 }
