--- a/src/styles.scss
+++ b/src/styles.scss
@@ -197,7 +197,7 @@
   border-radius: 25px;
   color: rgba(0, 0, 0, 0.6);
   // opacity: .7;;
-  // background-color: #b1b1b1;
+  background-color: #DDDDDD;
   outline: none !important;
   border: none;
   font-size: 17px;
