--- a/src/app/neon-list/neon-list.component.html
+++ b/src/app/neon-list/neon-list.component.html
@@ -301,7 +301,7 @@
         <!-- <div class="card_image">
  
         </div> -->
-        <div style="padding: 0 ! " class="card_content ">
+        <div style="padding: 0 !important " class="card_content ">
           <span style='margin-left: 20px !important; margin-top: 3%; ' class="ec-card-title">
             Récapitulatif
           </span>
