--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -2,15 +2,38 @@
   <div class='admin-list-title col-12'>
     <h3 class="admin-title">Vue Globale: {{numOfCommands}} demandes dont {{numOfCreated}} en attente , {{numOfDT}}
       traitées, {{numOfPayes}} payées</h3>
-    <a (click)="exportAsXLSX()" href="#" class="buttonDownload">Bicrave Excel</a>
-    <button (click)="openStats()" style="padding-right: 30px; padding-left: 30px;" class="next-btn">Stats et
-      biff</button>
+    
+  </div>
 
+  <div style="display: flex; justify-content: space-around; margin-bottom: 15px;" class="col-12">
+    <a (click)="exportAsXLSX()" href="#" class="buttonDownload">Bicrave Excel</a>
+    <button (click)="openStats()" style="padding-right: 30px; padding-left: 30px;" class="next-btn-no-margin">Conversion</button>
+      <button (click)="logout()" style="padding-right: 30px; padding-left: 30px;" class="next-btn-no-margin">Déco</button>
+      <div class="select">
+        <select (change)="filterCommand($event.target.value)" name="slct" id="slct">
+          <option value="all">Tout voir</option>
+          <option selected disabled>Choisit un filtre</option>
+          <option value="En cours de design">En cours de design</option>
+          <option value="Prêt">Prêt</option>
+          <option value="Payé">Payé</option>
+          <option disabled>------------------------</option>
+          <option value="Consumer">Consumer</option>
+          <option value="Business">Business</option>
+          <option disabled>------------------------</option>
+          <option value="Lilly">Lilly</option>
+          <option value="Dannie">Dannie</option>
+          <option value="Billy">Billy</option>
+          <option value="Polly">Polly</option>
+          <option value="Jimmy">Jimmy</option>
+          <option value="Cobby">Cobby</option>
+          <option value="Tommy">Tommy</option>
+          <option value="Freddy">Freddy</option>
+        </select>
+      </div>
   </div>
 
   <div *ngIf="neonSelected === 'none'" class="admin-list-cont col-12 row">
-    <button (click)="logout()" style="padding-right: 30px; padding-left: 30px;" class="next-btn">Se déconnecter</button>
-    <table class="col-12">
+    <!-- <table class="col-12">
       <thead>
         <tr>
           <th>Yencli</th>
@@ -20,7 +43,6 @@
           <th>Etat</th>
           <th>Prix</th>
           <th>Typo</th>
-
           <th>Couleur</th>
 
           <th>Filtrer
@@ -43,7 +65,6 @@
                 <option value="Cobby">Cobby</option>
                 <option value="Tommy">Tommy</option>
                 <option value="Freddy">Freddy</option>
-
               </select>
             </div>
           </th>
@@ -57,7 +78,7 @@
           <td  data-column="Dessin technique">{{command.text}}</td>
           <td (click)="goToDetail(command)" data-column="Recu le">{{command.date}}</td>
 
-          <td (click)="goToDetail(command)" data-column="Etat">{{command.state}}</td>
+          <td (click)="goToDetail(  )" data-column="Etat">{{command.state}}</td>
           <td (click)="goToDetail(command)" data-column="Prix">{{command.price}}</td>
           <td (click)="goToDetail(command)" data-column="Typo">{{command.typo}}</td>
           <td (click)="goToDetail(command)" data-column="Couleur">{{command.colors}}</td>
@@ -68,21 +89,99 @@
             <div >
               <button  *ngIf="command?.state === 'Prêt' " (click)="relancer(command)" 
                 class="next-btn-no-margin">Relancer</button>
-
-
             </div>
             <div class="">
               <button (click)="deleteCommand(command)" style="margin-left: 15px;"
                 class="next-btn-no-margin">Supprimer</button>
             </div>
           </div>
-
-
         </tr>
 
 
       </tbody>
-    </table>
+    </table> -->
+    
+
+
+    <div *ngIf="neonList?.length > 0 && !isLoading" class="dm-dpls-titles-row mb-3">
+      <div class ="dm-dpls-titles-inner">
+      <div class="dpl-list-section-4"> 
+        <span class="dm-sort-title-text">Type & Email</span>
+        <!--<img src="../../../../assets/svg-assets/chevron-down.svg" class="ml-1 mt-1">-->
+      </div>
+      <div class="dpl-list-section">
+        <span class="dm-sort-title-text">Texte</span>
+        <!--<img src="../../../../assets/svg-assets/chevron-down.svg" class="ml-1 mt-1">-->
+      </div>
+      <div class="dpl-list-section-2">
+        <span class="dm-sort-title-text">Reçu le</span>
+        <!--<img src="../../../../assets/svg-assets/chevron-down.svg" class="ml-1 mt-1">-->
+      </div>
+
+      <!--<div class="dm-dpls-sort-title">-->
+        <!--<span class="dm-sort-title-text">Modified by</span>-->
+        <!--<img src="../../../../assets/svg-assets/chevron-down.svg" class="ml-1 mt-1">-->
+      <!--</div>-->
+      <div class="dpl-list-section">
+        <span class="dm-sort-title-text">Etat</span>
+      </div>
+      <div  style="min-width: 143px; max-width: 143px;"  class="dpl-list-section-labels">
+        <span class="dm-sort-title-text">Typo</span>
+        <!--<img src="../../../../assets/svg-assets/chevron-down.svg" class="ml-1 mt-1">-->
+      </div>
+      <div class="dpl-list-section-labels">
+        <span class="dm-sort-title-text">Couleurs</span>
+        <!--<img src="../../../../assets/svg-assets/chevron-down.svg" class="ml-1 mt-1">-->
+      </div>
+      <!--<div class="dpl-list-section">-->
+      <!--</div>-->
+    </div>
+    </div>
+
+
+    <div *ngFor="let dpl of neonList; let i=index" class="dm-list-row pointer"
+   >
+ <div class="dm-list-row-inner">
+ <div   (click)="goToDetail(dpl)" placement="top" container="body" tooltipClass="dm-status-tooltip" class="dpl-list-section-3">
+
+  <mat-icon class="script-dpl-icon"  *ngIf="dpl.type === 'business'" style="vertical-align: middle; margin-left: 3px;" mat-list-icon>business_center</mat-icon>
+  <mat-icon class="script-dpl-icon" *ngIf="dpl.type === 'consumer'" style="vertical-align: middle; margin-left: 3px;" mat-list-icon>emoji_people</mat-icon>
+
+
+<!--            <span [ngbTooltip]="dpl.name.length > 35 ? dpl.name : ''" >{{getShortWord(dpl.name, 35)}}</span>-->
+   <span  style="margin-left: 10px;">{{dpl.email}}</span>
+
+ </div>
+ <div  (click)="goToDetail(dpl)" class="dpl-list-section-2"><span>{{dpl?.text}}</span></div>
+ <div  (click)="goToDetail(dpl)" class="dpl-list-section-2"><span>{{dpl.date}}</span></div>
+ <div   (click)="goToDetail(dpl)" class="dpl-list-section"><span>{{dpl?.state}}</span></div>
+ <!-- <div class="dpl-list-section"><span>{{dpl?.price}}</span></div> -->
+ <div  (click)="goToDetail(dpl)" class="dpl-list-section"><span>{{dpl?.typo}}</span></div>
+
+ <div  (click)="goToDetail(dpl)" class="dpl-list-section"><span>{{dpl?.colors}}</span></div>
+
+ <div  style="display: flex; flex-direction: column; justify-content: flex-start;">
+
+
+  <div >
+    <!-- <button  *ngIf="dpl?.state === 'Prêt' " (click)="relancer(dpl)" 
+      class="next-btn-no-margin">Relancer</button> -->
+
+      <button *ngIf="dpl?.state === 'Prêt' " (click)="relancer(dpl)"  mat-stroked-button color="primary">Relancer</button>
+      <button  (click)="deleteCommand(dpl)"  mat-stroked-button color="warn">Supprimer</button>
+
+  </div>
+
+</div>
+
+ </div>
+
+</div>
+
+
+
+
+
   </div>
 </div>
 
